--- a/web/index.html
+++ b/web/index.html
@@ -128,5 +128,21 @@
 		</small>
 	</div>
 </div>
+<!-- Sorry I need to pay my ̶t̶a̶x̶e̶s̶  bills... -->
+<div align="center">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9962263199785319"
+	     crossorigin="anonymous"></script>
+	<ins class="adsbygoogle"
+	     style="display:block"
+	     data-ad-client="ca-pub-9962263199785319"
+	     data-ad-slot="9576804902"
+	     data-ad-format="auto"
+	     data-full-width-responsive="true"></ins>
+	<script>
+	window.addEventListener('load', function() {
+		(adsbygoogle = window.adsbygoogle || []).push({});
+	});
+   	</script>
+</div>
 </body>
 </html>
