--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,7 @@
 	<script src="lib/lz-string.min.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="css/playground.css">
+	<link rel="stylesheet" type="text/css" href="css/spinner.css">
 	<script src="js/scripteditor.js"></script>
 	<script src="js/scriptoutput.js"></script>
 	<script src="js/snippets.js"></script>
@@ -116,14 +117,14 @@
 				<div id="editor">
 				</div>
 			</div>
-	
+			
 			<div class="col-sm">
 				<ul class="nav nav-tabs">
 					<li class="nav-item">
 						<a class="nav-link active bg-dark" href="#" aria-disabled="false">Output</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link disabled" href="#" aria-disabled="true">Godot Engine <span id="godot-version"></span></a>
+						<a class="nav-link disabled" href="#" aria-disabled="true">Godot Engine <span id="godot-version"></span> <img id="spinner" width="16px" src="img/spinner.gif"></a>
 					</li>
 				</ul>
 				<div id="console">
