Add og meta to compat page

--- a/web/404.html
+++ b/web/404.html
@@ -1,6 +1,25 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<meta charset="utf-8" />
+	<meta name="description" content="Try a script right now! Desktop or mobile web browser." />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="William Tumeo" />
+
+	<meta property="og:type" content="profile" />
+	<meta property="og:title" content="GDScript Playground" />
+	<meta property="og:url" content="https://gd.tumeo.space/" />
+	<meta property="og:site_name" content="Tumeo Space" />
+	<meta property="profile:first_name" content="William" />
+	<meta property="profile:last_name" content="Tumeo" />
+	<meta property="og:image" content="https://gd.tumeo.space/img/gdscript.png" />
+	
+	<meta property="twitter:card" content="summary" />
+	<meta property="twitter:site" content="@tumeo_" />
+	<meta property="twitter:creator" content="@tumeo_" />
+	<meta property="twitter:text:title" content="GDScript Playground" />
+	<meta property="twitter:description" content="Try a script right now! Desktop or mobile web browser." />
+	<meta property="twitter:image" content="https://gd.tumeo.space/img/gdscript.png" />
 	<script>
 		// Compat: Redirect the old dynamic code route to main page
 		var pathname = location.pathname.split('/');
